easystogu/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easystogu-wildjboss-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: easystogu-app
  template:
    metadata:
      labels:
        app: easystogu-app
    spec:
      containers:
      - name: easystogu-wildflyjboss-with-ear
        image: easystogu-wildflyjboss-with-ear:2.0.0-snapshot 
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
