easystogu/service-cluster.yml
---
# define a cluster service name for easystogu js react 
kind: Service
apiVersion: v1
metadata:
  name: easystogu-cluster
spec:
  selector:
    app: easystogu-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
