easystogu/service.yml
kind: Service
apiVersion: v1
metadata:
  name: easystogu-service
spec:
  selector:
    app: easystogu-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
