easystogu/istio-gateway.yaml
##one gateway for all ingress istio request
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: my-ingress-istio-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
