easystogu/ingress-using-nginx-ingress.yml
---
# Define a 'Ingress' To Expose easystogu for outside
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: easystogu-ingress
  annotations:
    kubernetes.io/ingress.class: nginx 
spec:
  rules:
    - host: easystogu.cn
      http:
        paths: 
          - backend:
              serviceName: easystogu-cluster
              servicePort: 8080
            path: /
